--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -44,15 +44,16 @@
 
             <div class="col-md-2 text-md-right">
                 <h6 class="text-white">Contact Us</h6>
-                <p class="mb-0">📞+233-000-0000</p>
-                <p class="mb-0">📧 info@lig.gh.com</p>
+                <p class="mb-0">📞059 188 4422</p>
+                <p class="fab fa-whatsapp">+23320 952 2722</p>
+                <p class="mb-0">📧 info@lig.com.gh</p>
                 <p class="mb-0">📍 Adweso-Koforidua Road</p>
             </div>
         </div>
 
         <div class="row mt-4 border-top pt-3">
             <div class="col-md-6 text-center text-md-left">
-                <p class="mb-0">&copy; 2007 - 2025 LuckyTech Innovations. All rights reserved.</p>
+                <p class="mb-0">&copy; 2020 - 2025 LuckyTech Innovations. All rights reserved.</p>
             </div>
             <div class="col-md-6 text-md-right">
                 <i class="fab fa-cc-visa fa-lg mx-2"></i>
